# pizzalab-grpc

./: README.md  app.py  build.ps1  client.py  pyproject.toml
pizzalab/: logging.py
pizzalab/grpc/pizzarpc/: __init__.py
protos/: methods.proto  pizza.proto
